--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "24.0.0 rc3"
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         applicationId "com.yueshenginfo.jnjw"
@@ -20,17 +20,20 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:support-v4:23.3.0'
     compile files('libs/gson-2.2.4.jar')
     compile files('libs/Volley.jar')
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okio:okio:1.5.0'
     compile 'com.facebook.fresco:fresco:0.9.0+'
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.9.0+'
-    compile 'com.android.support:support-v4:23.3.0'
+
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.flyco.pageindicator:FlycoPageIndicator_Lib:1.0.0@aar'
     compile 'com.flyco.banner:FlycoBanner_Lib:1.1.8@aar'
+
+    compile 'com.jakewharton:butterknife:8.0.0'
 }
