--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,18 +22,18 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile files('libs/gson-2.2.4.jar')
     compile files('libs/Volley.jar')
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okio:okio:1.5.0'
     compile 'com.facebook.fresco:fresco:0.9.0+'
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.9.0+'
-
+    compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.flyco.pageindicator:FlycoPageIndicator_Lib:1.0.0@aar'
-    compile 'com.flyco.banner:FlycoBanner_Lib:1.1.8@aar'
-
-    compile 'com.jakewharton:butterknife:8.0.0'
+    compile 'com.flyco.banner:FlycoBanner_Lib:2.0.2@aar'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.7.6'
 }
