--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '23.0.3'
 
     defaultConfig {
-        applicationId "com.yueshenginfo.jnjw"
+        applicationId "com.yueshenginfo.jncc"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -31,7 +31,6 @@ dependencies {
     compile 'com.squareup.okio:okio:1.5.0'
     compile 'com.facebook.fresco:fresco:0.9.0+'
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.9.0+'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.flyco.banner:FlycoBanner_Lib:2.0.2@aar'
     compile 'com.jakewharton:butterknife:7.0.1'
